packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/accept/semi-anti.ttrp
container c(in accounts, in orders, out result) target erp_pg """sql
SELECT account_id FROM accounts
WHERE account_id IN (SELECT customer FROM orders)
"""
