packages/kotlin/ttrp-frontend/src/test/resources/corpus/ttr-sql/reject/TTRP-SQL-003.ttrp
// expect: TTRP-SQL-003
container c target erp_pg """sql
SELECT id FROM t WITH (NOLOCK)
"""
